dark mode fix

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,10 @@ textarea{
   background-color: white;
   color: black;
 }
+#sidebar-close-button{
+  background-color: white;
+  color: black;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
